<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/back"
        tools:context="breathalyser.LevelActivityData">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#FFA500"
        android:text="@string/alkomat_textView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:buttonTint="@color/menuItemColor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/menuItemColor"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioButton_female"
            android:textColor="#FFA500" />

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/menuItemColor"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioButton_male"
            android:textColor="#FFA500" />

    </RadioGroup>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout_weight"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFA500"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <TextView
            android:id="@id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/editText_waga"
            android:text="@string/textView_waga"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFA500"
            android:textSize="15sp"
            android:visibility="visible" />
        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:textAlignment="center"
            android:textColor="#FFA500"
                  android:id="@+id/editText_waga"
                  android:inputType="number"
                  tools:ignore="Autofill" android:text="60"/>

        <TextView
            android:id="@id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/editText_waga"
            android:text="@string/textView_kg"
            android:textColor="#FFA500"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/linearLayout2"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout_weight"
                  app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button_dalej">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:id="@+id/linearLayout_poczatek"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <TextView
                android:id="@id/textView"
                android:layout_width="match_parent"
                android:textColor="#FFA500"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/textView_poczatek"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="15sp" />
            <TextView android:layout_width="match_parent" android:layout_height="0dp"
                       android:layout_weight="1"
                       android:textAlignment="center"
                android:textColor="#FFA500"
                       android:id="@+id/textClock_poczatek"
                       android:onClick="showTimePickerDialog" android:textSize="20sp"
            />
        </LinearLayout>

        <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:id="@+id/linearLayout_koniec"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <TextView
                android:id="@id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#FFA500"
                android:text="@string/textView_koniec"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="15sp" />
            <TextView android:layout_width="match_parent" android:layout_height="0dp"
                       android:layout_weight="1"
                android:textColor="#FFA500"
                       android:textAlignment="center"
                       android:id="@+id/textClock_koniec"
                       android:onClick="showTimePickerDialog" android:textSize="20sp"
            />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_dalej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#FFA500"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/listshape"
        android:onClick="startNextActivity"
        android:text="@string/button_dalej"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>